WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92219
[EFL][DRT] fast/loader/stop-provisional-loads.html fails
https://bugs.webkit.org/show_bug.cgi?id=92219
Summary
[EFL][DRT] fast/loader/stop-provisional-loads.html fails
Joone Hur
Reported
2012-07-24 23:43:49 PDT
We need to add the ability to tell DRT to call ewk_frame_stop inside of a didStartProvisionalLoadForFrame signal handler. For more details, please take a look at
https://trac.webkit.org/changeset/34972
.
Attachments
Patch
(2.74 KB, patch)
2012-07-25 00:12 PDT
,
Joone Hur
no flags
Details
Formatted Diff
Diff
Patch
(2.76 KB, patch)
2012-07-30 22:30 PDT
,
Joone Hur
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joone Hur
Comment 1
2012-07-25 00:12:32 PDT
Created
attachment 154279
[details]
Patch
Chris Dumez
Comment 2
2012-07-25 00:17:53 PDT
Comment on
attachment 154279
[details]
Patch As long as it does not cause regressions for other tests, LGTM. Maybe you should use [DRT] keyword in bug title.
Gyuyoung Kim
Comment 3
2012-07-25 00:25:26 PDT
Comment on
attachment 154279
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=154279&action=review
As we talk on irc, please consider WK2 layout test as well.
> Tools/ChangeLog:10 > + Reviewed by NOBODY (OOPS!).
Generally, patch description is placed below *Reviewed by NOBODY*. But, this is not rule.
Chris Dumez
Comment 4
2012-07-25 00:29:02 PDT
Comment on
attachment 154279
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=154279&action=review
>> Tools/ChangeLog:10 >> + Reviewed by NOBODY (OOPS!). > > Generally, patch description is placed below *Reviewed by NOBODY*. But, this is not rule.
Right, sorry I missed that.
Joone Hur
Comment 5
2012-07-30 22:30:47 PDT
Created
attachment 155440
[details]
Patch
Joone Hur
Comment 6
2012-07-30 22:42:50 PDT
@Christophe, @Gyuyoung: I've moved the description below *Reviewed by NOBODY* and checked that this test case already passes in WK2 test. Thanks for the review.
Kenneth Rohde Christiansen
Comment 7
2012-08-03 04:42:56 PDT
Comment on
attachment 155440
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=155440&action=review
> Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp:690 > + const String frameName(DumpRenderTreeSupportEfl::suitableDRTFrameName(frame));
Btw Qt is getting rid for DumpRenderTreeSupportQt for a separate library. You should have a look
WebKit Review Bot
Comment 8
2012-08-03 05:16:45 PDT
Comment on
attachment 155440
[details]
Patch Clearing flags on attachment: 155440 Committed
r124599
: <
http://trac.webkit.org/changeset/124599
>
WebKit Review Bot
Comment 9
2012-08-03 05:16:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug