[EFL][DRT] fast/loader/stop-provisional-loads.html fails https://bugs.webkit.org/show_bug.cgi?id=92219

Patch by Joone Hur <joone.hur@intel.com> on 2012-08-03
Reviewed by Kenneth Rohde Christiansen.

This patch adds the ability to tell DRT to call ewk_frame_stop
inside of a didStartProvisionalLoadForFrame signal handler.
It allows to pass fast/loader/stop-provisional-loads.html.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::onFrameProvisionalLoad):

Canonical link: https://commits.webkit.org/110945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124599 268f45cc-cd09-0410-ab3c-d52691b4dbfc